WE-6937 - Clean up